[tool.poetry]
name = "astar-utils"
version = "0.1.0"
description = ""
authors = ["Fabian Haberhauer <fabian.haberhauer@univie.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
