[project]
name = "astar-utils"
version = "0.3.4rc1"
description = "Contains commonly-used utilities for AstarVienna's projects."
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at"}
]
maintainers = [
    {name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at"},
    {name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl"},
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Utilities"
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "more-itertools (>=10.2.0,<11.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "colorama (>=0.4.6,<1.0)"
]

[project.urls]
repository = "https://github.com/AstarVienna/astar-utils"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]
